(library
 (name timew)
 (public_name timew-mcp.timew)
 (modules timew)
 (libraries ppx_inline_test yojson core_unix logs)
 (preprocess
  (pps ppx_deriving.show ppx_expect ppx_yojson_conv))
 (inline_tests))

(library
 (name composition)
 (public_name timew-mcp.composition)
 (modules composition))

(library
 (name timew_mcp)
 (modules timew_mcp)
 (libraries timew composition core ppx_inline_test)
 (preprocess
  (pps ppx_deriving.show ppx_yojson_conv ppx_expect))
 (inline_tests))
