(library
 (name timew)
 (public_name timew-mcp.timew)
 (modules timew)
 (libraries ppx_inline_test yojson core_unix logs)
 (preprocess
  (pps ppx_deriving.show ppx_expect ppx_yojson_conv))
 (inline_tests))

(library
 (name types)
 (public_name timew-mcp.types)
 (modules types)
 (libraries yojson mcp_error)
 (preprocess
  (pps ppx_deriving.show ppx_yojson_conv)))

(library
 (name server)
 (public_name timew-mcp.server)
 (modules server)
 (libraries yojson types core mcp_error))

(library
 (name mcp_error)
 (public_name timew-mcp.mcp_error)
 (modules mcp_error)
 (libraries yojson)
 (preprocess
  (pps ppx_deriving.show ppx_yojson_conv)))

(library
 (name composition)
 (public_name timew-mcp.composition)
 (modules composition))

(library
 (name timew_mcp)
 (modules timew_mcp)
 (libraries timew composition core ppx_inline_test types mcp_error server)
 (preprocess
  (pps ppx_deriving.show ppx_yojson_conv ppx_expect))
 (inline_tests))
